--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 services:
   database:
     restart: always
-    image: "postgres"
+    image: "postgres:latest"
     ports:
         - 5432:5432
     env_file:
