--- a/pom.xml
+++ b/pom.xml
@@ -35,16 +35,15 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.1-901-1.jdbc4</version>
-            <scope>runtime</scope>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
         <dependency>
-            <groupId>org.testcontainers</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>1.10.6</version>
-            <scope>test</scope>
+            <version>42.2.6</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
