--- a/src/main/resources/database/application.properties
+++ b/src/main/resources/database/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/Cinema
 spring.datasource.user=user
 spring.datasource.password=password
